<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group1"
        >
        <item
            android:id="@+id/nav_pizzas"
            android:icon="@drawable/ic_baseline_local_pizza_24"
            android:title="@string/pizzas" />
        <item
            android:id="@+id/nav_cocktails"
            android:icon="@drawable/ic_baseline_local_drink_24"
            android:title="@string/cocktails" />
        <item
            android:id="@+id/nav_pasta"
            android:icon="@drawable/ic_baseline_pasta"
            android:title="@string/pasta" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group2"
        >
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_local_phone_24"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_app" />

    </group>




</menu>